# hessian-dendrogram

./: .gitignore  README.md  app.py  fiedler_app.py  modadd_app.py  pyproject.toml
docs/: index.html
docs/plans/: 2026-02-17-modadd-grokking-design.md  2026-02-17-modadd-grokking-plan.md  2026-02-28-fiedler-bipartition-design.md  2026-02-28-fiedler-bipartition-plan.md
scripts/: resume_phase2.py  run_modadd_150k.py
src/: dendrogram.py  hessian.py  modadd_model.py  modadd_train.py  model.py  recompute_hessians.py  run_experiment.py  run_fiedler.py  run_modadd.py  spectral_dendrogram.py  train.py  visualize.py
tests/: test_dendrogram.py  test_hessian.py  test_modadd_model.py  test_modadd_train.py  test_model.py  test_spectral_dendrogram.py  test_train.py  test_visualize.py
